--- a/nicepage.css
+++ b/nicepage.css
@@ -35515,28 +35515,34 @@ a.u-link.u-text-hover-grey-90:hover {
 
 /*end-variables sitestylecss*/
 .u-header .u-sheet-1 {
-  min-height: 104px;
+  min-height: 195px;
 }
 
 .u-header .u-text-1 {
-  margin: 26px 510px 26px 0;
+  margin: 60px 55px;
 }
 @media (max-width: 1199px) {
   .u-header .u-text-1 {
-    margin-right: 310px;
+    margin-right: 0;
+    margin-left: 0;
+    width: 764px;
   }
 }
 @media (max-width: 991px) {
   .u-header .u-text-1 {
-    margin-right: 90px;
+    width: 720px;
   }
 }
 @media (max-width: 767px) {
   .u-header .u-text-1 {
-    margin-right: 0;
+    width: 540px;
   }
 }
-
+@media (max-width: 575px) {
+  .u-header .u-text-1 {
+    width: 340px;
+  }
+}
  .u-footer {
   background-image: none;
 }
